--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,8 @@
     display: flex;
     flex-wrap: wrap;
     width: 450px;
-    border: 1px solid #fff;
-    box-shadow:inset 0px 0px 0px 2px #000;
+    border: 3px solid #000;
+    box-shadow: 0px 0px 0px 2px #fff;
 }
 .checkbord__letters {
     flex-grow: 1;
